--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <head>
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
-    <link href="the-cafe-menu-styles.css" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
     <title>Cafe Menu</title>
     </head>
     <body>
